Осталась пагинация и update по нескольким полям
