# docs/swagger.yaml
@@ -22,11 +22,8 @@ definitions:
         type: string
       year:
         description: Year is the year of manufacture of the car
-        maximum: 2024
-        minimum: 1900
         type: integer
     required:
-    - id
     - mark
     - model
     - owner
@@ -66,11 +63,7 @@ definitions:
       regNum:
         type: string
       year:
-        maximum: 2024
-        minimum: 1900
         type: integer
-    required:
-    - id
     type: object
   hh_ru_pkg_domain.UpdatePeople:
     properties:
@@ -217,6 +210,35 @@ paths:
           schema:
             type: string
       summary: Delete a car
+      tags:
+      - Car
+  /car/{regNum}:
+    get:
+      consumes:
+      - application/json
+      description: Get a car by its registration number
+      parameters:
+      - description: Registration number of the car
+        in: path
+        name: regNum
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/hh_ru_pkg_domain.Car'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/gin.H'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/gin.H'
+      summary: Get a car by registration number
       tags:
       - Car
   /people:
